feat: add enrollment admin console
